# Pygame-Dungeon-Game

./: .gitignore  README.md  build.sh  main.py  pyproject.toml  run.py  run.spec  versioninfo.txt
DungeonGame/: attack.py  characters.py  constants.py  debug.py  enemy.py  game.py  going_tile.py  hit_flash.py  level.py  move_room.py  player.py  prompt.py  scenery.py  sounds-pygbag.py  sounds.py  treasure_chest.py  treasure_coin.py  treasure_gem.py  treasure_health.py  treasure_winner.py
DungeonGame/data/core/rooms/1/: status.json
DungeonGame/data/core/rooms/2/: status.json
DungeonGame/data/core/rooms/4/: status.json
DungeonGame/data/core/rooms/6/: status.json
DungeonGame/data/core/rooms/7/: status.json
DungeonGame/data/live/rooms/1/: status.json
DungeonGame/data/live/rooms/4/: status.json
DungeonGame/data/live/rooms/5/: layout.txt
DungeonGame/data/live/rooms/6/: layout.txt  status.json
WorldOfPhunne/: attack.py  characters.py  constants.py  debug.py  enemy.py  game.py  going_tile.py  hit_flash.py  level.py  move_room.py  player.py  scenery.py  sounds.py  tile.py  treasure_chest.py  treasure_coin.py  treasure_gem.py  treasure_health.py  treasure_winner.py
WorldOfPhunne/configs/: items.json  settings.json
WorldOfPhunne/data/core/rooms/1/: layout.txt  status.json
WorldOfPhunne/data/core/rooms/2/: layout.txt  status.json
WorldOfPhunne/data/core/rooms/3/: status.json
WorldOfPhunne/data/core/rooms/4/: layout.txt
WorldOfPhunne/data/core/rooms/5/: status.json
WorldOfPhunne/data/live/: player.json
WorldOfPhunne/rooms/: 1.txt  2.txt
(+10 files in other folders)
