[project]
name = "pygame-dungeon-game"
version = "0.1.0"
description = ""
authors = [
    {name = "jackwhitworth",email = "jack@jackwhitworth.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "pygbag (>=0.9.2,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
